Make ui look better

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,9 @@
 </head>
 <body>
   <main class="pp-container">
+    <section class="pp-reset">
+      <button class="pp-reset_button button shield red serif">reset</button>
+    </section>
     <header class="pp-header">
       <p class="pp-header_legend">
         Player turn:
@@ -47,18 +50,16 @@
     <div class="pp-scores">
       <section class="pp-score">
         <score class="pp-score_number">2</score>
-        <button class="pp-score_add">+</button>
-        <button class="pp-score_remove">-</button>
+        <button class="pp-score_add button green glossy round">+</button>
+        <button class="pp-score_remove button orange glass round">-</button>
       </section>
       <section class="pp-score">
         <score class="pp-score_number">12</score>
-        <button class="pp-score_add">+</button>
-        <button class="pp-score_remove">-</button>
+        <button class="pp-score_add button green glass round">+</button>
+        <button class="pp-score_remove button orange glass round">-</button>
       </section>
     </div>
-    <section class="pp-reset">
-      <button class="pp-reset_button">reset</button>
-    </section>
+
   </main>
 
   <script src="main.js"></script>
