--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <div class="pp-scores">
       <section class="pp-score">
         <score class="pp-score_number">2</score>
-        <button class="pp-score_add button green glossy round">+</button>
-        <button class="pp-score_remove button orange glass round">-</button>
+        <button class="pp-score_add button green glossy ">+</button>
+        <button class="pp-score_remove button blue glass ">-</button>
       </section>
       <section class="pp-score">
         <score class="pp-score_number">12</score>
-        <button class="pp-score_add button green glass round">+</button>
-        <button class="pp-score_remove button orange glass round">-</button>
+        <button class="pp-score_add button green glass ">+</button>
+        <button class="pp-score_remove button blue glass ">-</button>
       </section>
     </div>
 
